# msrv-prep

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.msrv  DEVELOPMENT.md  README.md  SECURITY.md  build.rs  codecov.yml  justfile  tarpaulin.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit-check.yml  ci.yml  publish.yml  release.yml
bins/cargo-msrv-prep/: Cargo.toml
bins/cargo-msrv-prep/src/: lib.rs  main.rs
resources/tests/cargo-msrv-prep/no_changes/: expected.toml
resources/tests/cargo-msrv-prep/rootless_workspace/member_a/: Cargo.toml
resources/tests/cargo-msrv-prep/rootless_workspace/member_b/: expected.toml
resources/tests/cargo-msrv-prep/simple_project/: Cargo.toml
resources/tests/cargo-msrv-prep/simple_project/expected/: all.toml  no-merge-pinned-dependencies.toml  no-remove-rust-version.toml
resources/tests/cargo-msrv-prep/workspace/: Cargo.toml  expected.toml
resources/tests/cargo-msrv-prep/workspace/member_a/: expected.toml
resources/tests/cargo-msrv-prep/workspace/member_b/: Cargo.toml
resources/tests/cargo-msrv-prep/workspace/member_c/: Cargo.toml  expected.toml
resources/tests/cargo-msrv-unprep/no_changes/: Cargo.toml
resources/tests/cargo-msrv-unprep/rootless_workspace/: Cargo.toml
resources/tests/cargo-msrv-unprep/rootless_workspace/member_a/: Cargo.toml
resources/tests/cargo-msrv-unprep/rootless_workspace/member_b/: Cargo.toml
resources/tests/cargo-msrv-unprep/rootless_workspace/member_c/: Cargo.toml
resources/tests/cargo-msrv-unprep/simple_project/: Cargo.toml
resources/tests/cargo-msrv-unprep/workspace/: Cargo.toml  Cargo.toml.msrv-prep.bak
resources/tests/cargo-msrv-unprep/workspace/member_a/: Cargo.toml
resources/tests/simple_project/expected/: all.toml  no-merge-pinned-dependencies.toml  no-remove-rust-version.toml
resources/tests/workspace/: Cargo.toml  expected.toml  msrv-pins.toml
resources/tests/workspace/member_a/: Cargo.toml  expected.toml
resources/tests/workspace/member_b/: expected.toml
src/: common_args.rs  detail.rs  lib.rs  main.rs  metadata.rs  mockable.rs  result.rs
src/detail/: toml.rs
tests/: cargo_msrv_prep_integration_tests.rs  cargo_msrv_prep_tests.rs  cargo_msrv_unprep_tests.rs  integration_tests.rs
tests/cargo_msrv_prep/: mod.rs
tests/cargo_msrv_unprep/: mod.rs
