[package]
name = "cargo-msrv-prep"
version = "2.0.0"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2021"
rust-version = "1.74.1"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/clechasseur/msrv-prep#readme"
repository = "https://github.com/clechasseur/msrv-prep"
documentation = "https://docs.rs/cargo-msrv-prep"

description = "Cargo subcommand useful to prepare for determining/verifying a crate's MSRV"

keywords = [ "cli", "cargo", "subcommand", "testing" ]
categories = [ "command-line-utilities", "development-tools::cargo-plugins", "development-tools::testing" ]

include = [ "src/**/*", "tests/**/*", "resources/**/*", "Cargo.lock", "Cargo.toml", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)" ]

[[bin]]
name = "cargo-msrv-unprep"
path = "src/bin/cargo_msrv_unprep.rs"

[dependencies]
cargo_metadata = "0.18.1"
clap = { version = "4.5.11", features = ["cargo", "derive"] }
# Note: clap-cargo 0.14 uses a different way of determining default workspace members,
# but that only works on Rust 1.71+. We'll keep using 0.13 for the time being; I'll try
# to propose a change to clap-cargo to lift that restriction.
clap-cargo = { version = "0.14.1", features = ["cargo_metadata"] }
clap-verbosity-flag = "2.2.1"
env_logger = "0.11.5"
log = "0.4.22"
mockall_double = "0.3.1"
thiserror = "1.0.63"
toml_edit = "0.22.18"

[dev-dependencies]
assert_cmd = "2.0.15"
assert_fs = "1.1.2"
assert_matches = "1.5.0"
indoc = "2.0.5"
mockall = "0.13.0"
predicates = "3.1.0"
test-log = "0.2.16"
toml = "0.8.17"
