[package]
name = "cargo-msrv-prep"
version = "2.1.1"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2021"
rust-version = "1.79.0"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/clechasseur/msrv-prep#readme"
repository = "https://github.com/clechasseur/msrv-prep"

description = "Cargo subcommand useful to prepare for determining/verifying a crate's MSRV"

keywords = [ "cli", "cargo", "subcommand", "testing" ]
categories = [ "command-line-utilities", "development-tools::cargo-plugins", "development-tools::testing" ]

include = [ "src/**/*", "tests/**/*", "resources/**/*", "Cargo.lock", "Cargo.toml", "LICENSE", "README.md" ]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin)", "cfg(tarpaulin_include)", "cfg(coverage)", "cfg(coverage_nightly)" ]

[[bin]]
name = "cargo-msrv-unprep"
path = "src/bin/cargo_msrv_unprep.rs"

[dependencies]
# Note: we lock ourselves to cargo-metadata 0.18 because of the lock on clap-cargo (see below).
cargo_metadata = "^0.18.1"
clap = { version = "4.5.56", features = ["cargo", "derive"] }
# Note: clap-cargo 0.14 uses a different way of determining default workspace members,
# but that only works on Rust 1.71+. We'll keep using 0.13 for the time being; I'll try
# to propose a change to clap-cargo to lift that restriction.
clap-cargo = { version = "^0.13.0", features = ["cargo_metadata"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
log = "0.4.29"
mockall_double = "0.3.1"
thiserror = "2.0.18"
toml_edit = "0.23.7"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
assert_matches = "1.5.0"
indoc = "2.0.7"
mockall = "0.14.0"
predicates = "3.1.3"
test-log = "0.2.19"
toml = "0.9.8"
