[package]
name = "cargo-msrv-prep"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

readme.workspace = true
license.workspace = true

description = "Cargo subcommand useful to prepare for determining/verifying a crate's MSRV"

keywords.workspace = true
categories.workspace = true

[dependencies]
msrv-prep-lib = { workspace = true }
