[workspace]
members = [
    "member_a",
    "member_b",
    "member_c"
]

[workspace.dependencies]
either = "1.10.0"
mockall = "0.12.1"
rustc_version = "0.4.0"

[package]
name = "test-workspace"
version = "0.1.0"
authors = [ "Charles Lechasseur <shiftingbeard@outlook.com>" ]
edition = "2021"
rust-version = "1.70.0"

[dependencies]
either.workspace = true

[dev-dependencies]
mockall.workspace = true

[build-dependencies]
rustc_version.workspace = true
